[package]
name = "cms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.28"
mongodb = "3.1.0"
rand = "0.8.5"
ring = "0.17.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
